--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationPartyBuilding/associationPartyBuilding.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationPartyBuilding/associationPartyBuilding.html
@@ -6,7 +6,7 @@
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
 <title>党建活动_${webname}</title>
-<link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
+<link rel="shortcut icon" href="${fileserver}/uploadFile/ico/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/channel.css"
 	rel="stylesheet" type="text/css" />
 <script type="text/javascript"
