--- a/shtyxh-manager/WebContent/WEB-INF/view/index/news/newsSearch.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/news/newsSearch.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>搜索_${webname}</title>
-	<link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
+	<link rel="shortcut icon" href="${fileserver}/uploadFile/ico/favicon.ico" />
 	<link href="${base.contextPath}/lib/index/search/static/css/style_law3.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="${base.contextPath}/lib/index/search/static/js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="${base.contextPath}/lib/index/search/static/js/laydate/laydate.js"></script>
@@ -118,13 +118,13 @@
 	.vT_search_sortby li.current a{color:#fff;text-decoration:none}
 	.vT_search_sortby li a{color:#555;text-decoration:none}
 	.zcfg_listheader p{line-height:35px;font-size:14px;font-weight:bolder;}
-	.zcfg_listheader p span.title{width:749px;height:35px;background:#f1f1f1;border-right:1px solid #fff;text-align:center;display:block;float:left;}
-	.zcfg_listheader p span.zxlb{width:119px;height:35px;background:#f1f1f1;border-right:1px solid #fff;text-align:center;display:block;float:left;}
-	.zcfg_listheader p span.bwrq{width:89px;height:35px;background:#f1f1f1;text-align:center;display:block;float:left;}
+	.zcfg_listheader p span.title{width:805px;height:35px;background:#f1f1f1;border-right:1px solid #fff;text-align:center;display:block;float:left;}
+	.zcfg_listheader p span.zxlb{width:184px;height:35px;background:#f1f1f1;border-right:1px solid #fff;text-align:center;display:block;float:left;}
+	.zcfg_listheader p span.bwrq{width:160px;height:35px;background:#f1f1f1;text-align:center;display:block;float:left;}
 
 
 
-		#vT_bidSearch_o {width:960px; border:1px solid #ccd;}
+		#vT_bidSearch_o {width:1150px; border:1px solid #ccd;}
 		.vT_bidSearch_outsider{width:100%}
 		.vT_bidSearch_addon_con{width:100%;border-bottom:1px dotted #eee}
 		.vT_bidSearch_addon_block{width:240px;height:50px;float:left;margin-left:30px;}
