--- a/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/assessmentDetail.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/assessmentDetail.html
@@ -9,7 +9,7 @@
 <meta http-equiv="expires" content="0">
 <meta name="csrf-token" content="{{ csrf_token() }}">
 <title>${assessmentInfo.assessmentActivityName}_${webname}</title>
-<link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
+<link rel="shortcut icon" href="${fileserver}/uploadFile/ico/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/detail.css" rel="stylesheet" type="text/css" />
 
 <script  type="text/javascript" src="${base.contextPath}/lib/index/search/static/js/jquery-1.11.1.min.js"></script>
@@ -291,7 +291,7 @@ var FileInput = function () {
 $(function () {
 	 	var oFileInput = new FileInput();
 // 	    oFileInput.Init("txt_file", "${base.contextPath}/index/admin/assessment/upload?assessmentActivityId="+${assessmentInfo.id});
-	    oFileInput.Init("txt_file", "http://localhost:8080/fileserver/uploadAssessment?userid=${userid}&assessmentActivityId=${assessmentInfo.id}");
+	    oFileInput.Init("txt_file", "${fileserver}/uploadAssessment?userid=${userid}&assessmentActivityId=${assessmentInfo.id}");
 	    
 		$("#table").bootstrapTable({ // 对应table标签的id
 		      url: "${base.contextPath}/index/admin/assessmentDetail/uploadList?activityId="+${assessmentInfo.id}, // 获取表格数据的url
