--- a/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/gwpx.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/gwpx.html
@@ -6,7 +6,7 @@
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
 <title>岗位培训_${webname}</title>
-<link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
+<link rel="shortcut icon" href="${fileserver}/uploadFile/ico/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/common/common.css" rel="stylesheet" type="text/css" />
 <link href="${base.contextPath}/lib/index/css/associationSurvery/associationSurvery.css" rel="stylesheet" type="text/css" />
 <script language="javascript" src="${base.contextPath}/lib/jquery/jquery.min.js" ></script>
