--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationDynamics/associationDynamicsTypeList.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationDynamics/associationDynamicsTypeList.html
@@ -6,7 +6,7 @@
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
 <title>${kgtype.typename!}_${webname}</title>
-<link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
+<link rel="shortcut icon" href="${fileserver}/uploadFile/ico/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/detail.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="${base.contextPath}/lib/bootstrap-3.3.7/css/bootstrap.min.css">
 <script language="javascript" src="${base.contextPath}/lib/jquery/jquery.min.js" ></script>
