--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationSurvey/associationSurvey.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationSurvey/associationSurvey.html
@@ -6,7 +6,7 @@
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
 <title>${nowType.typename!}</title>
-<link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
+<link rel="shortcut icon" href="${fileserver}/uploadFile/ico/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/common/common.css" rel="stylesheet" type="text/css" />
 <link href="${base.contextPath}/lib/index/css/associationSurvery/associationSurvery.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="${base.contextPath}/lib/index/search/static/js/jquery-1.11.1.min.js"></script>
