--- a/shtyxh-manager/WebContent/WEB-INF/view/index/download/download.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/download/download.html
@@ -7,7 +7,7 @@
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
 <title>资料下载_${webname}</title>
-<link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
+<link rel="shortcut icon" href="${fileserver}/uploadFile/ico/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/detail.css" rel="stylesheet" type="text/css" />
 <link type="text/css" rel="stylesheet" href="http://cdn.staticfile.org/twitter-bootstrap/3.1.1/css/bootstrap.min.css"/>
 <script language="javascript" src="${base.contextPath}/lib/jquery/jquery.min.js" ></script>
