--- a/shtyxh-manager/WebContent/WEB-INF/view/index/news/news.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/news/news.html
@@ -6,7 +6,7 @@
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
 <title>法规与资讯_${webname}</title>
-<link rel="shortcut icon" href="${base.contextPath}/favicon.ico" />
+<link rel="shortcut icon" href="${fileserver}/uploadFile/ico/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/channel.css" rel="stylesheet" type="text/css" />
 <link href="${base.contextPath}/lib/index/css/news/news.css" rel="stylesheet" type="text/css" />
 <script  type="text/javascript" src="${base.contextPath}/lib/index/search/static/js/jquery-1.11.1.min.js"></script>
@@ -69,7 +69,7 @@ $(document).ready(function(){
 <form name="searchForm" id="searchForm" action="${base.contextPath}/index/news/search" method="post">
 <input type="hidden" name="page_index" id="page_index" value="1" />
 <style>
-#vT_bidSearch_o {width:1000px;}
+#vT_bidSearch_o {width:1190px;}
 .vT_bidSearch_outsider{width:100%}
 .vT_bidSearch_addon_con{width:100%;border-bottom:1px dotted #eee}
 .vT_bidSearch_addon_block{width:240px;height:50px;float:left;margin-left:30px;}
