--- a/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/trainAndAssessment.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/trainAndAssessment.html
@@ -99,8 +99,17 @@
         <div class="main_right_cbl">
 	         <ul class="jyxtlinks mb15">
 					<li class="jyxtlinks sys0"><p><a href="${base.contextPath}/index/jdypx/gwpx" target="_blank" alt="岗位培训" title="岗位培训">岗位培训</a></p></li>
-					<li class="jyxtlinks sys1 singleln"><p><a href="${base.contextPath}/index/jdypx/gwpx?typeid=22" target="_blank" alt="幼教上岗证" title="幼教上岗证">幼教上岗证</a></p></li>
-					<li class="jyxtlinks sys4 singleln"><p><a href="${base.contextPath}/index/jdypx/gwpx?typeid=23" target="_blank" alt="致立培训" title="致立培训">致立培训</a></p></li>
+					
+				<#list gwpxTypeList as typeList>   
+					<#if typeList.id==22>
+						<li class="jyxtlinks sys1 singleln">
+					<#elseif typeList.id==23>
+						<li class="jyxtlinks sys4 singleln">
+					<#else>
+						<li class="jyxtlinks sys8 singleln">
+					</#if>
+					<p><a href="${base.contextPath}/index/jdypx/gwpx?typeid=${typeList.id}" target="_blank" alt="${typeList.typename}" title="${typeList.typename}">${typeList.typename}</a></p></li>
+               	</#list>
 			</ul>
 		</div>
 	</div>
