--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationInvestigation/associationInvestigation.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationInvestigation/associationInvestigation.html
@@ -17,9 +17,9 @@
 
 	<div class="main">
 		<div class="main_container">
-			<div class="main_topic_block mt13">
-				<img src="${base.contextPath}/lib/index/img/dcyyj/dcyyj.png" width="100%" height="123px"/>
-			</div>
+<!-- 			<div class="main_topic_block mt13"> -->
+<!-- 				<img src="${base.contextPath}/lib/index/img/dcyyj/dcyyj.png" width="100%" height="123px"/> -->
+<!-- 			</div> -->
 			<!--left newslist start-->
 			<div class="main_left_block mt13">
 				<div class="wz_block">
