--- a/shtyxh-manager/WebContent/WEB-INF/view/index/offers/offers.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/offers/offers.html
@@ -43,99 +43,12 @@
 	    <div class="vF_detail_relcontent mt13">
 		    <h2><p>${kgType.typename}</p></h2>
 		    <div class="vF_detail_relcontent_lst">
-		        <table id="table"></table>
+		      <div style="height:130px">
+				&nbsp;&nbsp;&nbsp;&nbsp;内容开发中...
+				</div>
 		    </div>
 		</div>
-			<script>
-			  //得到查询的参数
-				   function queryParams(params) {
-				        var temp = {   //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
-		        		    pageSize: params.limit, // 每页要显示的数据条数
-			                offset: params.offset, // 每页显示数据的开始行号
-			                sort: params.sort, // 要排序的字段
-			                sortOrder: params.order // 排序规则
-				        };
-				        return temp;
-				    };
-// 					$("#searchBtn").click(function() {
-// 		                var memberno = $("#memberno").val();
-// 		                var kindergartenname = $("#kindergartenname").val();
-// 		                var kindergartensite = $("#kindergartensite").val();
-// 		                var obj =  {memberno : memberno,kindergartenname:kindergartenname,kindergartensite:kindergartensite};
-// 		                $('#table').bootstrapTable('refresh');
-// 		            });
-					$(function () {
-						$("#table").bootstrapTable({ // 对应table标签的id
-						      url: "${base.contextPath}/index/offersList", // 获取表格数据的url
-						      cache: false, // 设置为 false 禁用 AJAX 数据缓存， 默认为true
-						      striped: true,  //表格显示条纹，默认为false
-						      pagination: true, // 在表格底部显示分页组件，默认false
-						      pageList: [10, 20], // 设置页面可以显示的数据条数
-						      pageSize: 10, // 页面数据条数
-						      pageNumber: 1, // 首页页码
-						      sidePagination: 'server', // 设置为服务器端分页
-							  queryParams:queryParams,
-						      responseHandler: function(res) {
-					                return {
-					                    "total": res.totalProperty,//总页数
-					                    "rows": res.results   //数据
-					                 };
-					          },
-						      sortName: 'id', // 要排序的字段
-						      sortOrder: 'desc', // 排序规则
-						      columns: [{  
-				                      title: '序号',//标题  可不加  
-				                      width:50,
-				                      align: 'center',
-				                      formatter: function (value, row, index) {  
-			//	                           return index+1;  
-				  							 var pageSize=$('#table').bootstrapTable('getOptions').pageSize;//通过表的#id 可以得到每页多少条
-				               				 var pageNumber=$('#table').bootstrapTable('getOptions').pageNumber;//通过表的#id 可以得到当前第几页
-				               				 return pageSize * (pageNumber - 1) + index + 1;    //返回每条的序号： 每页条数 * （当前页 - 1 ）+ 序号
-				                      }  
-				                  }, {
-						              field: 'title',
-						              title: '标题',
-						              align: 'center',
-						              valign: 'middle',
-						              formatter:function(value,row,index) {
-// 						            	  var path ="${base.contextPath}";
-// 						            	  return ['<a href="'+path+'/index/offers/Detail?id='+row.id+'">'+value+'</a>'];
-										  return value;
-						              }
-						          }, {
-						              field: 'salary',
-						              title: '薪资',
-						              width:150,
-						              align: 'center',
-						              valign: 'middle'
-						          }, {
-						              field: 'publishunit',
-						              title: '发布单位',
-						              align: 'center',
-						              valign: 'middle'
-						          }
-						      ],
-						      onLoadSuccess: function(){  //加载成功时执行
-						            console.info("加载成功");
-						      },
-						      onLoadError: function(){  //加载失败时执行
-						            console.info("加载数据失败");
-						      },
-						      onClickRow: function (row) { 
-						    	  var path ="${base.contextPath}/index/offers/Detail?id="+row.id;
-						    	  window.location.href=path;
-				              }
-						})
-						
-						
-						$('#table').on('click-row.bs.table', function (e, row, element) {
-								//$(element).css({"color":"blue","font-size":"16px;"});
-// 									console.log(row);
-								
-							});
-					})
-					</script>
+			
 	</div>
 </div>
 
