--- a/shtyxh-manager/WebContent/lib/index/css/news/news.css
+++ b/shtyxh-manager/WebContent/lib/index/css/news/news.css
@@ -7,6 +7,7 @@
 .main_right_cbl ul li.sys0{background:url(../../img/news/rightsys_0.gif) no-repeat top left #00b8ee;border:none;padding-top:8px}
 .main_right_cbl ul li.sys1{background:url(../../img/news/rightsys_1.gif) no-repeat top left #fff;background-position:21px 15px}
 .main_right_cbl ul li.sys4{background:url(../../img/news/rightsys_4.gif) no-repeat top left #fff;background-position:21px 15px}
+.main_right_cbl ul li.sys8{background:url(../../img/news/rightsys_8.gif) no-repeat top left #fff;background-position:21px 15px}
 
 .main_right_cbl ul li p a {font-size: 14px; font-weight: bolder;line-height: 18px;color: #333;text-decoration: none;}
 .main_right_cbl ul li p a:hover {text-decoration: underline;color: #ba2636;}
