--- a/shtyxh-manager/WebContent/WEB-INF/view/include/footer.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/include/footer.html
@@ -17,8 +17,8 @@
 			<#if ICPlicense??>
 			<a target="_blank" href="${ICPlicensePath}"
 				style="display: inline-block; text-decoration: none; height: 20px; line-height: 20px;">
-				<img src="${base.contextPath}/lib/index/img/batb.png"
-				style="float: left;" />
+<!-- 				<img src="${base.contextPath}/lib/index/img/batb.png" -->
+<!-- 				style="float: left;" /> -->
 			<p style="float: left; height: 20px; line-height: 20px; margin: 0px 0px 0px 5px; color: #ffffff;">${ICPlicense}</p>
 			</a>
 			</#if>
@@ -27,3 +27,4 @@
 		<div class="footerLinks"></div>
 	</div>
 </div>
+${tj!}
