--- a/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/assessmentDetail.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/assessment/assessmentDetail.html
@@ -1,13 +1,4 @@
-<!doctype html>
-<html>
-<head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
-<meta http-equiv="X-UA-Compatible" content="IE=9" />
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="pragma" content="no-cache">
-<meta http-equiv="cache-control" content="no-cache">
-<meta http-equiv="expires" content="0">
-<meta name="csrf-token" content="{{ csrf_token() }}">
+<#include "../../include/meta.html">
 <title>${assessmentInfo.assessmentActivityName}_${webname}</title>
 <link rel="shortcut icon" href="${fileserver}/uploadFile/ico/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/detail.css" rel="stylesheet" type="text/css" />
