--- a/shtyxh-manager/WebContent/WEB-INF/view/index/user/user.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/user/user.html
@@ -1,10 +1,4 @@
-<!doctype html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="pragma" content="no-cache">
-<meta http-equiv="cache-control" content="no-cache">
-<meta http-equiv="expires" content="0">
+<#include "../../include/meta.html">
 <title>个人中心_${webname}</title>
 <link rel="shortcut icon" href="${fileserver}/uploadFile/ico/favicon.ico" />
 <link href="${base.contextPath}/lib/index/css/channel.css" rel="stylesheet" type="text/css" />
