--- a/shtyxh-manager/WebContent/WEB-INF/view/index/index.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/index.html
@@ -182,7 +182,7 @@
 													<a href="${base.contextPath}/index/offers" target="_blank">${zxzxShow.typename}</a></dt>
 													<#list zxzxShow.offersList as offersList>
 														<dd>
-															<a href="${base.contextPath}/index/offers/Detail?id=${offersList.id}" target="_blank" title="${offersList.title}">${offersList.newsSimpleTitle}</a>
+															<a href="${base.contextPath}/index/offers/Detail?id=${offersList.id}" target="_blank" title="${offersList.offertitle}">${offersList.newsSimpleTitle}</a>
 														</dd>
 													</#list>
 												<#else>
