--- a/shtyxh-manager/WebContent/WEB-INF/view/index/offers/offers.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/offers/offers.html
@@ -47,9 +47,9 @@
 		            <div class="panel-body">
 		                <form role="form" id="searchForm" class="form-horizontal">
 		                    <div class="form-group">
-		                    		<label class="col-sm-2 control-label" for="kindergartenname">所属区县</label> 
+		                    		<label class="col-sm-2 control-label" for="unitname">单位名称</label> 
 		                           	<div class="col-md-4">
-		                           		<input type="text" class="form-control" id="kindergartenname" name="kindergartenname" placeholder="请输入园所名称">
+		                           		<input type="text" class="form-control" id="unitname" name="unitname" placeholder="请输入单位名称">
 		                           	</div>
 		                    </div>
 		                     <div class="form-group" >
@@ -61,6 +61,9 @@
 			</div>
 		    
 		    <div class="vF_detail_relcontent_lst">
+		    	<div class="form-group" >
+		               <div class="col-md-12"> <button type="button" id="toAdminBtn" class="btn btn-default pull-left">发布职位</button></div>
+		        </div>
 		        <table id="table"></table>
 		    </div>
 		</div>
@@ -78,6 +81,9 @@
 				    };
 				    $("#searchBtn").click(function() {
 		                $('#table').bootstrapTable('refresh');
+		            });
+				    $("#toAdminBtn").click(function() {
+				    	window.open("${base.contextPath}/admin/main"); 
 		            });
 					$(function () {
 						$("#table").bootstrapTable({ // 对应table标签的id
@@ -121,6 +127,8 @@
 						              title: '区县',
 						              width:150,
 						              align: 'center',
+						              sortable : true,
+						              sortName : 'cantonid',
 						              valign: 'middle'
 						          }, {
 						              field: 'unitname',
@@ -130,6 +138,8 @@
 						          }, {
 						              field: 'kgUnitType.unittypename',
 						              title: '办园性质',
+						              sortable : true,
+						              sortName : 'unittypeid',
 						              align: 'center',
 						              valign: 'middle'
 						          }, {
