区县换成区

--- a/shtyxh-manager/WebContent/WEB-INF/view/index/offers/offers.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/offers/offers.html
@@ -124,7 +124,7 @@
 						              }
 						          }, {
 						              field: 'kgcanton.cantonname',
-						              title: '区县',
+						              title: '区',
 						              width:150,
 						              align: 'center',
 						              sortable : true,
