1.招聘工作名称添加类别 2.前台招聘类别显示更改

--- a/shtyxh-manager/WebContent/WEB-INF/view/admin/main.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/admin/main.html
@@ -121,6 +121,10 @@
 	<script src="${base.contextPath}/lib/extjs/myExt/Offers/Offers.js"></script>
 	<script src="${base.contextPath}/lib/extjs/myExt/Offers/item/addorUpdateOffersWindow.js"></script>
 	
+	<!-- 招聘 -->
+	<script src="${base.contextPath}/lib/extjs/myExt/Offers/OffersType.js"></script>
+	<script src="${base.contextPath}/lib/extjs/myExt/Offers/item/addorUpdateOffersTypeWindow.js"></script>
+	
 	<!-- 历史沿革 -->
 	<script src="${base.contextPath}/lib/extjs/myExt/History/History.js"></script>
 	<script src="${base.contextPath}/lib/extjs/myExt/History/item/addorUpdateHistoryWindow.js"></script>
