1.首页招聘栏目修改

--- a/shtyxh-manager/WebContent/WEB-INF/view/include/meta.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/include/meta.html
@@ -7,3 +7,4 @@
 <meta http-equiv="expires" content="0">
 <meta name="Keywords" content="${keyword!}" />
 <meta name="Description" content="${webdesc!}" />
+<meta name="360-site-verification" content="5df0e2ec9dfe4d9ade1bf3af10ffe1af" />
