--- a/shtyxh-manager/WebContent/WEB-INF/view/index/offers/offers.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/offers/offers.html
@@ -13,6 +13,11 @@
 <script src="${base.contextPath}/lib/bootstrap-table/js/bootstrap-table.min.js"></script>
 <script src="${base.contextPath}/lib/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
 
+<!-- bootstrapselect插件 -->
+<link href="${base.contextPath}/lib/bootstrap-select/css/bootstrap-select.min.css" rel="stylesheet" />
+<script src="${base.contextPath}/lib/bootstrap-select/bootstrap-select.min.js"></script>
+<script src="${base.contextPath}/lib/bootstrap-select/i18n/defaults-zh_CN.min.js"></script>
+
 <style type="text/css">
 .table-striped > tbody > tr:nth-child(2n+1) > td, 
 .table-striped > tbody > tr:nth-child(2n+1) > th {
@@ -54,6 +59,20 @@ table {table-layout: fixed;word-break:break-all; word-wrap:break-all;};
 		                           		<input type="text" class="form-control" id="unitname" name="unitname" placeholder="请输入单位名称">
 		                           	</div>
 		                    </div>
+		                     <div class="form-group">
+		                    		<label class="col-sm-2 control-label" for="offertypeid">岗位类别</label> 
+		                           	<div class="col-md-4">
+		                           		<select class="selectpicker" id="offertypeid">
+		                           			<option value="-1">所有</option>        
+										    <#list kgOffersType as kgOffersType>
+										    	<option value="${kgOffersType.id}">${kgOffersType.offertypename}</option>     
+										    </#list>                   
+										</select>
+		                           	</div>
+		                           	<script>
+		                           		$('.selectpicker').selectpicker('val', '${offertypeid!-1}');
+		                           	</script>
+		                    </div>
 		                     <div class="form-group" >
 		                        	 <div class="col-md-12"> <button type="button" id="searchBtn" class="btn btn-default pull-right">开始搜索</button></div>
 		                    </div>
@@ -77,7 +96,8 @@ table {table-layout: fixed;word-break:break-all; word-wrap:break-all;};
 			                offset: params.offset, // 每页显示数据的开始行号
 			                sort: params.sort, // 要排序的字段
 			                sortOrder: params.order, // 排序规则
-			                unitname: $("#unitname").val()
+			                unitname: $("#unitname").val(),
+			                offertypeid: $("#offertypeid").val()
 				        };
 				        return temp;
 				    };
