--- a/shtyxh-manager/WebContent/lib/index/css/indexonly.css
+++ b/shtyxh-manager/WebContent/lib/index/css/indexonly.css
@@ -295,6 +295,7 @@ body{background:#f0f0f0;}
 .main_right_cbl_pxyjd_line{width:100%;background:url(../img/index/trainline.png) no-repeat ;height:9px;}
 
 .main_right_cbl_pxyjd .dldiv {width:100%;text-align:center;float:left;margin:10px 0 10px 0 ;}
+.main_right_cbl_pxyjd .dldivzp {width:100%;text-align:center;float:left;margin:5px 0 5px 0 ;}
 .main_right_cbl_pxyjd .bottomdldiv {width:100%;text-align:center;float:left;margin:10px 0 0px 0 ;background:url(../img/index/bottombackcolor.png) no-repeat bottom;}
 .main_right_cbl_pxyjd .dldiv_line{width:329px;text-align:center;float:left;margin-left:10px;border-bottom:1px solid #1180b8; }
 .main_right_cbl_pxyjd dl {width:160px;text-align:center;float:left;}
