--- a/shtyxh-manager/WebContent/WEB-INF/view/include/meta.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/include/meta.html
@@ -8,3 +8,4 @@
 <meta name="Keywords" content="${keyword!}" />
 <meta name="Description" content="${webdesc!}" />
 <meta name="360-site-verification" content="5df0e2ec9dfe4d9ade1bf3af10ffe1af" />
+<meta name="sogou_site_verification" content="mCNmr98xoJ"/>
