1.招聘只能管理员删除和修改

--- a/shtyxh-manager/WebContent/WEB-INF/view/admin/main.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/admin/main.html
@@ -148,7 +148,7 @@
 				} 
 				var theLoginUserName = ' ${userRealName!}';
 				var theLoginUserId = ' ${theLoginUserId!}';
-			
+				var isAdmin = ' ${isAdmin!}';
 		</script>
 	
 </head>
