--- a/shtyxh-manager/WebContent/WEB-INF/view/include/footer.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/include/footer.html
@@ -13,15 +13,15 @@
 			</#if>
 		</div>
 		<div class="siteWidth">
-			&nbsp;&nbsp; 
+			<span style="float: center; height: 20px; line-height: 20px; margin: 0px 0px 0px 5px; color: #ffffff;">
 			<#if ICPlicense??>
 			<a target="_blank" href="${ICPlicensePath}"
 				style="display: inline-block; text-decoration: none; height: 20px; line-height: 20px;">
 <!-- 				<img src="${base.contextPath}/lib/index/img/batb.png" -->
 <!-- 				style="float: left;" /> -->
-			<p style="float: left; height: 20px; line-height: 20px; margin: 0px 0px 0px 5px; color: #ffffff;">${ICPlicense}</p>
-			</a>
+			${ICPlicense} </a>
 			</#if>
+			&nbsp;&nbsp;&nbsp;&nbsp;累计访问量:${visitCount}</span>
 		</div>
 
 		<div class="footerLinks"></div>
