1.用户基本信息修改的时候不允许修改密码

--- a/shtyxh-manager/WebContent/WEB-INF/view/index/user/user.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/user/user.html
@@ -47,10 +47,10 @@
 			alert("请输入姓名！");
 			return;
 		}
-		if(password.length>8){
-			alert("密码长度大于8位！");
-			return;
-		}
+// 		if(password.length>8){
+// 			alert("密码长度大于8位！");
+// 			return;
+// 		}
 		var addOrUpdateUserObj = {
 	        	  realName:realName,
 	        	  passwordEncrypted:password,
